# supersqa-test-dashboard

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  deploy.github.sh  deploy.sh  notes.txt  pyproject.toml  release_notes.txt  requirements.txt
.github/workflows/: main.yml
app/: app.py
app/src/: deleteme.py
automationdashboard/: __init__.py  run.py  variables.sh
automationdashboard/dao/: test_results_dao.py
automationdashboard/src/: test_result.py  test_results.py  test_results_processor.py
automationdashboard/templates/: archived.home.html  base.html  dashboard.html  home.html  stats.html  suite_card.html
automationdashboard/views/: get_results.py  post_results.py  views.py
management/: mysql_start_automationdashboard.sh  notes.txt
management/sql/: create_database.sql  create_table.sql
prototype/: create_dummy_data.py  main.py  pyproject.toml  run.sh
prototype/templates/: base.html  dashboard.html  stats.html
scripts/: create_dummy_test_results.py  init_db.sh  setup_local.sh  setup_local_db.sh
uat_automation/: pytest.ini
uat_automation/tests/: test_health_check.py
