[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automationdashboard"
version = "0.1.0"
description = "Automation Dashboard for test results"
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
    "gunicorn>=21.2.0",
    "pylint>=3.0.0",
    "PyMySQL>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools]
packages = ["automationdashboard"] 